[package]
name = "glossary"
version = "0.1.1"
edition = "2021"
authors = ["Duyet <me@duyet.net>"]

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
actix-web-validator = "5.0.1"
ammonia = "3"
anyhow = "1.0.67"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "extras", "uuid"] }
diesel_migrations = "2"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.90"
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1.0.38"
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
actix-rt = "2"
