[package]
name = "glossary"
version = "0.1.1"
edition = "2021"
authors = ["Duyet <me@duyet.net>"]

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
actix-web-validator = "5.0.1"
ammonia = "3"
anyhow = "1.0.79"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "extras", "uuid"] }
diesel_migrations = "2"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1.0.38"
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
actix-rt = "2"
