[package]
name = "glossary"
version = "0.1.1"
edition = "2021"
authors = ["Duyet <me@duyet.net>"]

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
actix-web-validator = "6.0.0"
ammonia = "4"
anyhow = "1.0.82"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "extras", "uuid"] }
diesel_migrations = "2"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1.0.59"
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
actix-rt = "2"
